--- a/MultiAgentSystem/Views/MainWindow.xaml
+++ b/MultiAgentSystem/Views/MainWindow.xaml
@@ -15,7 +15,8 @@
                     <RowDefinition Height="10*" />
                     <RowDefinition Height="10*" />
                     <RowDefinition Height="10*" />
-                    <RowDefinition Height="70*" />
+                    <RowDefinition Height="10*" />
+                    <RowDefinition Height="60*" />
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0" VerticalAlignment="Center" Height="26">
@@ -28,11 +29,21 @@
                              TextAlignment="Center" />
                 </Grid>
 
-
                 <Grid Grid.Row="1" VerticalAlignment="Center" Height="26">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="65*" />
+                        <ColumnDefinition Width="35*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" HorizontalAlignment="Center" Text="Кол-во агентов:" Height="20" />
+                    <TextBox Grid.Column="1" HorizontalAlignment="Center" Height="20" Width="35" Text="{Binding CountAgent}"
+                             TextAlignment="Center" />
+                </Grid>
+
+
+                <Grid Grid.Row="2" VerticalAlignment="Center" Height="26">
                     <Button Grid.Column="0" Content="Ввести" Click="Apply_Clicked" Margin="5,0,5,0"></Button>
                 </Grid>
-                <Grid Margin="0,5,0,5"  Grid.Row="2" VerticalAlignment="Center" Height="26">
+                <Grid Margin="0,5,0,5"  Grid.Row="3" VerticalAlignment="Center" Height="26">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50*" />
                         <ColumnDefinition Width="50*" />
